//use a protobuf 3 defination as the persistent data format 

syntax = "proto3";

package ccprotos;

import "hyperledger.abchain.org/protos/crypto.proto";
import "google/protobuf/timestamp.proto";

message RegGlobalData {
	string regPrivilege = 1;
	string adminPrivilege = 2;
	map<uint32, string> chaincodes = 5;
	bytes  deployFlag = 10;
}

message RegData {
	protos.PublicKey pk = 1; 
	string 	  regTxid = 3;
	google.protobuf.Timestamp regTs = 4;
	string	  region = 5;
	bool	  enabled = 6;	  
	repeated  uint32 authcodes = 10; //chaincode which user has allowed to invoked the base transaction from
}
